--- a/notebooks/cnn_customdata_basic.ipynb
+++ b/notebooks/cnn_customdata_basic.ipynb
@@ -1,24 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple CNN with Custom Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Packages loaded\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"\n",
-    " Convolutional Neural Network (CNN) with Custom Data\n",
-    " @Sungjoon Choi (sungjoon.choi@cpslab.snu.ac.kr\n",
-    " based on \"https://github.com/aymericdamien/TensorFlow-Examples/\"\n",
-    "\"\"\"\n",
     "import os\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
-    "%matplotlib inline  "
+    "%matplotlib inline  \n",
+    "print (\"Packages loaded\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load data"
    ]
   },
   {
@@ -32,9 +49,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69 train images loaded\n",
-      "18 test images loaded\n",
-      "900 dimensional input\n",
+      "['trainlabel', 'trainimg', 'imgsize', 'testimg', 'testlabel']\n",
+      "52 train images loaded\n",
+      "35 test images loaded\n",
+      "4096 dimensional input\n",
+      "Image size is [64 64]\n",
       "2 classes\n"
      ]
     }
@@ -42,26 +61,34 @@
    "source": [
     "# Load them!\n",
     "cwd = os.getcwd()\n",
-    "loadpath = cwd + \"/data/trainingset.npz\"\n",
+    "loadpath = cwd + \"/data/data_gray.npz\"\n",
     "l = np.load(loadpath)\n",
     "\n",
     "# See what's in here\n",
-    "l.files\n",
+    "print (l.files)\n",
     "\n",
     "# Parse data\n",
     "trainimg = l['trainimg']\n",
     "trainlabel = l['trainlabel']\n",
     "testimg = l['testimg']\n",
     "testlabel = l['testlabel']\n",
+    "imgsize = l['imgsize']\n",
     "ntrain = trainimg.shape[0]\n",
     "nclass = trainlabel.shape[1]\n",
     "dim    = trainimg.shape[1]\n",
     "ntest  = testimg.shape[0]\n",
-    "\n",
     "print (\"%d train images loaded\" % (ntrain))\n",
     "print (\"%d test images loaded\" % (ntest))\n",
     "print (\"%d dimensional input\" % (dim))\n",
+    "print (\"Image size is %s\" % (imgsize))\n",
     "print (\"%d classes\" % (nclass))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define CNN architecture "
    ]
   },
   {
@@ -80,79 +107,84 @@
     }
    ],
    "source": [
-    "# Define convolutional neural network architecture \n",
-    "\n",
-    "# Parameters\n",
-    "learning_rate   = 0.001\n",
-    "training_epochs = 100\n",
-    "batch_size      = 100\n",
-    "display_step    = 10\n",
-    "\n",
-    "# Network\n",
     "n_input  = dim\n",
     "n_output = nclass\n",
     "weights  = {\n",
-    "    'wc1': tf.Variable(tf.random_normal([3, 3, 1, 64], stddev=0.1)),\n",
-    "    'wc2': tf.Variable(tf.random_normal([3, 3, 64, 128], stddev=0.1)),\n",
-    "    'wd1': tf.Variable(tf.random_normal([8*8*128, 1024], stddev=0.1)),\n",
-    "    'wd2': tf.Variable(tf.random_normal([1024, n_output], stddev=0.1))\n",
+    "    'wc1': tf.Variable(tf.random_normal([7, 7, 1, 128], stddev=0.1)),\n",
+    "    'wc2': tf.Variable(tf.random_normal([3, 3, 128, 128], stddev=0.1)),\n",
+    "    'wd1': tf.Variable(tf.random_normal(\n",
+    "            [imgsize[0]/4*imgsize[1]/4*128, 128], stddev=0.1)),\n",
+    "    'wd2': tf.Variable(tf.random_normal([128, n_output], stddev=0.1))\n",
     "}\n",
     "biases   = {\n",
-    "    'bc1': tf.Variable(tf.random_normal([64], stddev=0.1)),\n",
+    "    'bc1': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
     "    'bc2': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
-    "    'bd1': tf.Variable(tf.random_normal([1024], stddev=0.1)),\n",
+    "    'bd1': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
     "    'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
     "}\n",
-    "\n",
     "def conv_basic(_input, _w, _b, _keepratio):\n",
     "    # Input\n",
-    "    _input_r = tf.reshape(_input, shape=[-1, 30, 30, 1])\n",
-    "    \n",
+    "    _input_r = tf.reshape(_input, shape=[-1, imgsize[0], imgsize[1], 1])\n",
     "    # Conv1\n",
-    "    _conv1 = tf.nn.relu(tf.nn.bias_add(\n",
-    "            tf.nn.conv2d(_input_r, _w['wc1'], strides=[1, 1, 1, 1], padding='SAME')\n",
-    "            , _b['bc1']))\n",
-    "    _pool1 = tf.nn.max_pool(_conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "    mean, var = tf.nn.moments(_pool1, [0, 1, 2])\n",
-    "    _pool1 = tf.nn.batch_norm_with_global_normalization(_pool1, mean, var, 1., 0., 1e-7, 0)\n",
+    "    _conv1 = tf.nn.relu(tf.nn.bias_add(tf.nn.conv2d(_input_r\n",
+    "        , _w['wc1'], strides=[1, 1, 1, 1], padding='SAME'), _b['bc1']))\n",
+    "    _pool1 = tf.nn.max_pool(_conv1, ksize=[1, 2, 2, 1]\n",
+    "        , strides=[1, 2, 2, 1], padding='SAME')\n",
+    "    # mean, var = tf.nn.moments(_pool1, [0, 1, 2])\n",
+    "    # _pool1 = tf.nn.batch_norm_with_global_normalization(\n",
+    "    #     _pool1, mean, var, 1., 0., 1e-7, 0)\n",
     "    _pool_dr1 = tf.nn.dropout(_pool1, _keepratio)\n",
-    "    \n",
     "    # Conv2\n",
-    "    _conv2 = tf.nn.relu(tf.nn.bias_add(\n",
-    "            tf.nn.conv2d(_pool_dr1, _w['wc2'], strides=[1, 1, 1, 1], padding='SAME')\n",
-    "            , _b['bc2']))\n",
-    "    _pool2 = tf.nn.max_pool(_conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "    mean, var = tf.nn.moments(_pool2, [0, 1, 2])\n",
-    "    _pool2 = tf.nn.batch_norm_with_global_normalization(_pool2, mean, var, 1., 0., 1e-7, 0)\n",
+    "    _conv2 = tf.nn.relu(tf.nn.bias_add(tf.nn.conv2d(_pool_dr1\n",
+    "        , _w['wc2'], strides=[1, 1, 1, 1], padding='SAME'), _b['bc2']))\n",
+    "    _pool2 = tf.nn.max_pool(_conv2, ksize=[1, 2, 2, 1]\n",
+    "        , strides=[1, 2, 2, 1], padding='SAME')\n",
+    "    # mean, var = tf.nn.moments(_pool2, [0, 1, 2])\n",
+    "    # _pool2 = tf.nn.batch_norm_with_global_normalization(\n",
+    "    #     _pool2, mean, var, 1., 0., 1e-7, 0)\n",
     "    _pool_dr2 = tf.nn.dropout(_pool2, _keepratio)\n",
-    "    \n",
     "    # Vectorize\n",
-    "    _dense1 = tf.reshape(_pool_dr2, [-1, _w['wd1'].get_shape().as_list()[0]])\n",
-    "    \n",
+    "    _dense1 = tf.reshape(_pool_dr2\n",
+    "                         , [-1, _w['wd1'].get_shape().as_list()[0]])\n",
     "    # Fc1\n",
     "    _fc1 = tf.nn.relu(tf.add(tf.matmul(_dense1, _w['wd1']), _b['bd1']))\n",
     "    _fc_dr1 = tf.nn.dropout(_fc1, _keepratio)\n",
-    "    \n",
     "    # Fc2\n",
     "    _out = tf.add(tf.matmul(_fc_dr1, _w['wd2']), _b['bd2'])\n",
-    "    \n",
     "    # Return everything\n",
     "    out = {\n",
-    "        'input_r': _input_r,\n",
-    "        'conv1': _conv1,\n",
-    "        'pool1': _pool1,\n",
-    "        'pool1_dr1': _pool_dr1,\n",
-    "        'conv2': _conv2,\n",
-    "        'pool2': _pool2,\n",
-    "        'pool_dr2': _pool_dr2,\n",
-    "        'dense1': _dense1,\n",
-    "        'fc1': _fc1,\n",
-    "        'fc_dr1': _fc_dr1,\n",
-    "        'out': _out\n",
+    "        'input_r': _input_r, 'conv1': _conv1, 'pool1': _pool1\n",
+    "        , 'pool1_dr1': _pool_dr1, 'conv2': _conv2, 'pool2': _pool2\n",
+    "        , 'pool_dr2': _pool_dr2, 'dense1': _dense1, 'fc1': _fc1\n",
+    "        , 'fc_dr1': _fc_dr1, 'out': _out\n",
     "    }\n",
     "    return out\n",
-    "\n",
-    "\n",
+    "print (\"Network Ready to Go!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Functions ready\n"
+     ]
+    }
+   ],
+   "source": [
     "# tf Graph input\n",
     "x = tf.placeholder(tf.float32, [None, n_input])\n",
     "y = tf.placeholder(tf.float32, [None, n_output])\n",
@@ -161,61 +193,79 @@
     "# Functions! \n",
     "_pred = conv_basic(x, weights, biases, keepratio)['out']\n",
     "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(_pred, y))\n",
-    "optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost)\n",
+    "WEIGHT_DECAY_FACTOR = 0.0001\n",
+    "l2_loss = tf.add_n([tf.nn.l2_loss(v) \n",
+    "            for v in tf.trainable_variables()])\n",
+    "cost = cost + WEIGHT_DECAY_FACTOR*l2_loss\n",
+    "optm = tf.train.AdamOptimizer(learning_rate=0.001).minimize(cost)\n",
     "_corr = tf.equal(tf.argmax(_pred,1), tf.argmax(y,1)) # Count corrects\n",
     "accr = tf.reduce_mean(tf.cast(_corr, tf.float32)) # Accuracy\n",
     "init = tf.initialize_all_variables()\n",
-    "\n",
-    "print (\"Network Ready to Go!\")"
+    "print (\"Functions ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/100 cost: 131.368164062\n",
-      " Training accuracy: 0.440\n",
-      " Test accuracy: 0.722\n",
-      "Epoch: 010/100 cost: 5.934651852\n",
-      " Training accuracy: 0.830\n",
-      " Test accuracy: 0.556\n",
-      "Epoch: 020/100 cost: 3.606865406\n",
-      " Training accuracy: 0.820\n",
-      " Test accuracy: 0.889\n",
-      "Epoch: 030/100 cost: 0.281715333\n",
-      " Training accuracy: 0.970\n",
-      " Test accuracy: 0.778\n",
-      "Epoch: 040/100 cost: 0.749986887\n",
-      " Training accuracy: 0.930\n",
-      " Test accuracy: 0.611\n",
-      "Epoch: 050/100 cost: 0.002210732\n",
+      "Epoch: 000/400 cost: 22.932985306\n",
+      " Training accuracy: 0.460\n",
+      " Test accuracy: 0.400\n",
+      "Epoch: 040/400 cost: 2.813483953\n",
+      " Training accuracy: 0.570\n",
+      " Test accuracy: 0.400\n",
+      "Epoch: 080/400 cost: 2.744574785\n",
+      " Training accuracy: 0.560\n",
+      " Test accuracy: 0.429\n",
+      "Epoch: 120/400 cost: 2.657322884\n",
+      " Training accuracy: 0.840\n",
+      " Test accuracy: 0.629\n",
+      "Epoch: 160/400 cost: 2.600071192\n",
+      " Training accuracy: 0.840\n",
+      " Test accuracy: 0.743\n",
+      "Epoch: 200/400 cost: 2.448372126\n",
+      " Training accuracy: 0.850\n",
+      " Test accuracy: 0.800\n",
+      "Epoch: 240/400 cost: 2.369165897\n",
+      " Training accuracy: 0.880\n",
+      " Test accuracy: 0.686\n",
+      "Epoch: 280/400 cost: 2.061110258\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.889\n",
-      "Epoch: 060/100 cost: 0.000479146\n",
+      " Test accuracy: 0.800\n",
+      "Epoch: 320/400 cost: 1.966778517\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.833\n",
-      "Epoch: 070/100 cost: 0.000122233\n",
+      " Test accuracy: 0.743\n",
+      "Epoch: 360/400 cost: 1.928094387\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.889\n",
-      "Epoch: 080/100 cost: 0.000007404\n",
+      " Test accuracy: 0.771\n",
+      "Epoch: 399/400 cost: 1.898978710\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.889\n",
-      "Epoch: 090/100 cost: 0.000000012\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.889\n",
+      " Test accuracy: 0.800\n",
       "Optimization Finished!\n"
      ]
     }
    ],
    "source": [
+    "# Parameters\n",
+    "training_epochs = 400\n",
+    "batch_size      = 100\n",
+    "display_step    = 40\n",
+    "\n",
     "# Launch the graph\n",
     "sess = tf.Session()\n",
     "sess.run(init)\n",
@@ -230,29 +280,48 @@
     "        batch_xs = trainimg[randidx, :]\n",
     "        batch_ys = trainlabel[randidx, :]                \n",
     "        # Fit training using batch data\n",
-    "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys, keepratio:0.7})\n",
+    "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys\n",
+    "                                  , keepratio:0.5})\n",
     "        # Compute average loss\n",
-    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys, keepratio:1.})/num_batch\n",
+    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys\n",
+    "                                , keepratio:1.})/num_batch\n",
     "\n",
     "    # Display logs per epoch step\n",
-    "    if epoch % display_step == 0:\n",
-    "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
-    "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys, keepratio:1.})\n",
+    "    if epoch % display_step == 0 or epoch == training_epochs-1:\n",
+    "        print (\"Epoch: %03d/%03d cost: %.9f\" % \n",
+    "               (epoch, training_epochs, avg_cost))\n",
+    "        train_acc = sess.run(accr, feed_dict={x: batch_xs\n",
+    "                                , y: batch_ys, keepratio:1.})\n",
     "        print (\" Training accuracy: %.3f\" % (train_acc))\n",
-    "        test_acc = sess.run(accr, feed_dict={x: testimg, y: testlabel, keepratio:1.})\n",
+    "        test_acc = sess.run(accr, feed_dict={x: testimg\n",
+    "                                , y: testlabel, keepratio:1.})\n",
     "        print (\" Test accuracy: %.3f\" % (test_acc))\n",
     "\n",
-    "print (\"Optimization Finished!\")\n"
+    "print (\"Optimization Finished!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Test accuracy: 0.800\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_acc = sess.run(accr, feed_dict={x: testimg\n",
+    "                    , y: testlabel, keepratio:1.})\n",
+    "print (\" Test accuracy: %.3f\" % (test_acc))\n",
+    "#sess.close()\n",
+    "#print (\"Session closed.\")"
+   ]
   }
  ],
  "metadata": {
